--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -163,6 +163,13 @@ select option {
 	display: none;
 }
 
+.note {
+	font-size: 12px;
+	color: #888;
+	margin-top: 4px;
+	font-style: italic;
+}
+
 .time-container {
   display: flex;
   flex-direction: column;
